@@ -51,7 +51,12 @@ if (isset($_SESSION['authorized'])) {
                     <?php } else {
                     ?>
                         <!-- Utente NON Loggato -->
-                        <a class="nav-link" id="login" href="/login.php">Login</a>
+                        <li class="nav-item">
+                            <a class="nav-link" id="login" href="/login.php">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" id="register" href="/register.php">Register</a>
+                        </li>
                     <?php
 
                     } ?>
@@ -62,7 +67,10 @@ if (isset($_SESSION['authorized'])) {
 </nav>
 
 <script defer>
-    document.getElementById("<?php echo basename($currentPage, '.php'); ?>").className += " active";
+    var barra = document.getElementById("<?php echo basename($currentPage, '.php'); ?>");
+    if (barra != null){
+        barra.className += " active";
+    };
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <!-- END Navigation Bar -->
